# iceberg-cli

./: Cargo.toml  Dockerfile  README.md  developing.md  docker-compose.yml  iceberg_cli_dev_todo.html  integration_test.sh  phase1_review_iceberg_cli.html  sync-init.yaml  sync.example.yaml  sync.strategies.yaml
.devcontainer/: Dockerfile
.github/workflows/: ci.yml  integration.yml  release.yml
postgres/: init.sql
scripts/: integration-test.sh
src/: main.rs
src/cmd/: parse.rs
src/config/: mod.rs  validation.rs
src/sync/: engine.rs  file_name.rs  metadata.rs  mod.rs  pagination.rs  partition.rs  postgres.rs  rabbitmq.rs  schema.rs  write_strategies.rs
tests/: common.rs  integration_test.rs  test_basic.rs  test_bug_fix.rs  test_rabbitmq.rs  test_sync.rs  test_time_series.rs  test_write_strategies.rs
