[package]
name = "iceberg-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "iceberg-cli"
path = "src/main.rs"
 
[dependencies]
# Iceberg core + REST catalog
iceberg              = { version = "0.9.0" }
iceberg-catalog-rest = "0.9.0"
 
# Async runtime
tokio   = { version = "1",  features = ["full"] }
futures = "0.3"
 
# CLI argument parsing
clap = { version = "4", features = ["derive","env"] }
 
# Pretty output
comfy-table = "7"
serde_json  = "1"
 
# Arrow / Parquet
arrow-array  = "57.1"
arrow-schema = "57.1"
arrow-cast   = "57.1"
parquet      = "57.1"
 
# Error handling
anyhow = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
iceberg-storage-opendal = "0.9.0"
