[package]
name = "iceberg-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "iceberg-cli"
path = "src/main.rs"

[dependencies]
# Iceberg core + REST catalog
iceberg              = { version = "0.9.0" }
iceberg-catalog-rest = "0.9.0"

# Async runtime
tokio   = { version = "1",  features = ["full"] }
futures = "0.3"

# CLI argument parsing
clap = { version = "4", features = ["derive","env"] }

# Pretty output
comfy-table = "7"
serde_json  = "1"

# Arrow / Parquet
arrow-array  = "57.1"
arrow-schema = "57.1"
arrow-cast   = "57.1"
parquet      = "57.1"

# Error handling
anyhow = "1"

reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }
iceberg-storage-opendal = "0.9.0"

# Config
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-chrono-0_4", "with-uuid-0_8", "with-serde_json-1"] }
postgres-types = { version = "0.2", features = ["derive"] }

# RabbitMQ
lapin = "2"

# Utilities
uuid     = { version = "1", features = ["v4"] }
chrono   = { version = "0.4", features = ["serde"] }
tracing  = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }



[dev-dependencies]
tokio-test  = "0.4"
tempfile    = "3"